# SilentServer

./: Makefile  README.md  meson.build
Client/: Makefile
Client/include/: SocketClient.hpp
Client/src/: SocketClient.cpp  main.cpp
Server/: Makefile
Server/include/: SocketServer.hpp  SocketWrapper.hpp  Utils.hpp
Server/src/: SocketServer.cpp  SocketServrer.cpp  SocketWrapper.cpp  Utils.cpp  WebServrer.cpp  main.cpp
include/: WebServer.hpp
src/: WebServrer.cpp  main.cpp
